--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dexie": "^4.3.0",
     "fastest-levenshtein": "^1.0.16",
     "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-diff-viewer-continued": "^3.4.0",
