--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Backend
+.env.backend
+backend/uploads/
+backend/__pycache__/
+backend/app/__pycache__/
+**/__pycache__/
+*.pyc
