feat: Unify evaluation critiques and metrics, refine LLM provider configuration, and enhance VoiceRx UI components.

--- a/.env.backend.example
+++ b/.env.backend.example
@@ -11,9 +11,9 @@ CORS_ORIGINS=http://localhost:5173
 
 # LLM Providers (fill in your keys)
 GEMINI_API_KEY=
-GEMINI_MODEL=gemini-3-flash-preview
+GEMINI_MODEL=
 OPENAI_API_KEY=
-OPENAI_MODEL=gpt-4o
+OPENAI_MODEL=
 DEFAULT_LLM_PROVIDER=gemini
 EVAL_TEMPERATURE=0.1
 
